rename chapter files (add chapter number); alphabet order in APH research catalogue; some text editing in study design chapter.

--- a/part6/17_instruments_catalogue.Rmd
+++ b/part6/17_instruments_catalogue.Rmd
@@ -1,5 +1,5 @@
 
-# EMA Instruments Catalogue
+# EMA Instruments Catalogue {#ema-instruments-catalogue}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
