--- a/part2/03_study-design.Rmd
+++ b/part2/03_study-design.Rmd
@@ -1,22 +1,35 @@
 # (PART) EMA Methods {-}
 
-# Study Design {#methods}
-The starting point of any EMA study should be mindfully planning the general aspects of the study design, as is the case with all scientific research. Issues that need to be considered are, for example, hypotheses and research questions, the target population of interest, recruitment strategies to insure inclusion of a representative study group, comparison groups and allocation strategies [@Shiffman2008]. Because ample information on these topics can be found elsewhere (for example at http://www.consort-statement.org/ and http://www.emgo.nl/kc/), this guideline will not address these issues.
 
-When designing an EMA study, researchers also need to carefully consider some specific design aspects. This chapter gives a brief overview the sample plan, power analysis and ethical issues. Outcomes, methods of measurement and data analysis will be discussed in separate chapters. 
+# Study Design {#methods}
+
+The starting point of any EMA study should be mindfully planning the general aspects of the study design, as is the case with all scientific research. Issues that need to be considered are, for example, the research questions, the hypotheses, the population of interest, recruitment strategies to insure inclusion of a representative study group, the nature of the comparison groups and experimental group allocation strategies [@Shiffman2008]. Ample information on these topics can be found elsewhere (for example in the CONSORT reporint guidelines,  http://www.consort-statement.org/, and the EMGO quality manual, http://www.emgo.nl/kc/). This manual will not address these general issues.
+
+This chapter highlights specific design aspects of EMA studies. It provides a brief overview of the sample plan, power analysis and ethical issues. Outcomes, methods of measurement and data analysis will be discussed in separate chapters. 
+
 
 ## The Sample Plan
-One of the main reasons to use EMA is that it can reduce recall bias by measuring during or close to an event, rather than retrospectively. In order to make sure the outcome, pattern and/or context of interest are indeed captured during EMA, a sensible sample plan (also called a sampling scheme) is required. 
 
-###Active (obtrusive) EMA 
+One of the main reasons to use EMA is that it can reduce recall bias by measuring during or close to an event, rather than retrospectively. To make sure the outcome, pattern and/or context of interest are indeed captured during EMA, a sensible sample plan (also called a sampling scheme) is required. 
 
-####Timing of assessment
-Most often EMA sampling focusses on a time-point (signal-contingent plan), an event (event-contingent plan), or a combination of both [@Conner2012b]. When a signal-contingent plan is used, a participant receives a prompt and is required to rate an outcome at that moment. A signal plan can either contain fixed or random prompts. For example, in a fixed scheme, participants can be prompted to rate their mood every day at 18:00. When prompts are generated randomly, a fixed number of prompts is send at a random time-point within pre-set intervals. For example, a prompt is sent every day between 9:00 and 12:00, 13:00 and 15:00 and 16:00 and 18:00. This latter form of EMA is also described as experience sampling [@Moskowitz2006]. Using pre-set intervals will prevent participants from receiving several prompts within a limited time-frame [@Piasecki2007].
+### Timing of assessment
 
-Event-contingent sampling requires participants to complete an assessment when a specific event occurs, such as a panic attack or alcohol consumption. In case of continuous monitoring and real-time data processing, it is also possible to trigger event-based prompts automatically. For example, by linking a self-report EMA questionnaire to a change in activity level [@Smyth2003]. 
+EMA sampling may focus on a time-point (signal-contingent plan), an event (event-contingent plan), or a combination of both [@Conner2012b]. 
 
-####Frequency and duration
-In order to assure that the outcome of interest is captured, the required number of prompts (every day, hour, minute, etc.) and duration of assessment (hours, days, weeks, etc.) need to be considered. Increasing the prompt frequency often will allow you to gather a more detailed overview of the outcome of interest. However, in active EMA this also increases the burden that is placed on participants, which in turn can affect compliance and accuracy (REF). For example, measurement reactivity can occur, where the focus on their own behaviour causes participants to increase or decrease the frequency of the outcome of interest [@Hufford2002]. Also, issues related to hardware need to be considered, such as battery-life and memory space. This is especially relevant in passive EMA sampling, for example using GPS data.
+\index{sampling plan!signal-contingent} 
+When a *signal-contingent plan* is used, a participant receives a prompt and is asked to rate an outcome at that moment. A signal plan can either contain fixed or random prompts. For example, in a fixed scheme, participants can be prompted to rate their mood every day at 18:00. When prompts are generated randomly, a fixed number of prompts is sent at a random time-point, typically within pre-set intervals. For example, a prompt is sent every day between 9:00 and 12:00, 13:00 and 15:00 and 16:00 and 18:00. Using pre-set intervals ensures that participants do not receive several prompts within a limited time-frame [@Piasecki2007].
+
+
+\index{sampling plan!event-contingent} 
+In *event-contingent sampling*, participants are instructed to complete an assessment whenever a specific event occurs, such as a panic attack or alcohol consumption. 
+In case of continuous monitoring and real-time data processing, it is also possible to trigger event-based prompts automatically. For example, by linking a self-report EMA questionnaire to a change in activity level [@Smyth2003]. 
+
+
+#### Frequency and duration
+
+To assure that the outcome of interest is captured, the required number of prompts (every day, hour, minute, etc.) and duration of assessment (hours, days, weeks, etc.) need to be considered. Increasing the prompt frequency will allow a more detailed overview of the outcome of interest. However, in active EMA this also increases the burden that is placed on participants, which in turn can affect compliance and accuracy (REF). For example, measurement reactivity can occur, where the focus on their own behaviour causes participants to increase or decrease the frequency of the outcome of interest [@Hufford2002]. 
+
+Issues related to hardware need to be considered, such as battery-life and memory space. This is especially relevant in passive EMA sampling, for example using GPS data.
 
 When determining the appropriate sample plan, researchers are advised to start with mapping the expected fluctuation or patterns, based on available knowledge. For example, when an event is rare, it can be sufficient to ask participants to initiate EMA whenever the event occurs, or prompt them with an end-of-day diary. Adding more prompts in this scenario would not lead to more reliable data [@Piasecki2007]. 
 
@@ -25,6 +38,9 @@ Allow participants to suspend prompting? @Piasecki2007
 
 
 ```{r creating_a_sample_schedule, echo = TRUE}
+
+library(dplyr)
+
 participants <- 1:5
 days <- 1:14
 beeps <- 1:10
@@ -52,6 +68,8 @@ knitr::kable(
 
 
 ##  Power Analysis
+
+
 
 [How to determine the power of the experiment? Available analytic tools are
 too limited (no support for intensive longitudinal schemes. Solution: simulate
@@ -100,15 +118,6 @@ ut massa tempor, ac dapibus dui viverra.
 
 ## Devices 
 
-Opletten wat je koopt aan technologie Tabel onderbouwen devices 
-
-Gevalideerd vs nieuw
-
-Stabiliteit
-Kosten
-Back-office
-data opslag
-
 What is the data acquisition interface? [@Stone2002] Lorem ipsum dolor sit
 amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt
 urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit
@@ -118,15 +127,38 @@ bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
 Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
 dui viverra.
 
+Opletten wat je koopt aan technologie. Onderbouw keuze. Zie hoofdstuk X. Gevalideerd vs nieuw.
+
+- Technical Reliability of data platform
+- Track record of data platform suppliers
+- User-friendliness of data device for study participants.
+- User-friendliness of data platform for researcher (availability of an administrative back-office).
+- Location of data storage
+- Costs
+
+For an overview of existing EMA data platforms, see \@ref(ema-instruments-catalogue).
+
 
 ## Ethical Considerations
 
+Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta.
+
+Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
+bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
+Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
+dui viverra.
+
+
+### Privacy Protection
+
+Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
+
+
 ### Medical device
 
-All clinical studies that involve human participants need to be evaluated by a Medical Research and Ethics Committee (MERC, METC in Dutch). Recently, the committees have also been tasked to determine whether a medical device is used and to evaluate the safety and quality of the device. Researchers are therefore required to add a section in the research protocol, explaining why the software/device is or is not a medical device. This chapter gives a brief overview of this process.  
+All clinical studies that involve human participants need to be evaluated by a Medical Research and Ethics Committee (MERC; Dutch: 'METC'). Recently, the committees have also been tasked to determine whether a medical device is used and to evaluate the safety and quality of the device. Researchers are therefore required to add a section in the research protocol, explaining why the software/device is or is not a medical device. This chapter gives a brief overview of this process.  
 
-#### Definition of a medical device
-The official definition of a medical device (Medical Device Act, or Wet Medische Hulpmiddelen) is as follows (http://www.ccmo.nl/en/research-with-a-medical-device):
+The official definition of a medical device (Medical Device Act, or 'Wet Medische Hulpmiddelen') is as follows:
 
 > “Any instrument, apparatus or appliance, any software or material or any other
 > article that is used alone or in combination, including any accessory and the 
@@ -140,31 +172,18 @@ The official definition of a medical device (Medical Device Act, or Wet Medische
 > human body by pharmacological, immunological or metabolic means, but which may be 
 > assisted in its function by such means.” [@ccmo_meddev]
 
-In short, software can be classified as a medical device if it collects patient-specific data and is specifically intended for one of the above-mentioned objectives. Or in other words, if a health care professional takes this information into account when determining the course of treatment. The law does not differentiate between passive and active measurement.
+In short, software can be classified as a medical device if it collects patient-specific data and is specifically intended for one of the above-mentioned objectives. Or in other words, if a health care professional takes this information into account when determining the course of treatment. The law does not differentiate between passive and active EMA.
 
-#### Is my product a medical device?
-The website http://cetool.nl/general/scanAid offers a quick scan that helps to determine whether an app of product should be classified as a medical device. Figure \@ref(fig:meddevflowchart) shows a flow-chart, based on these questions. 
+In practice, the definition of medical devices leaves a lot of room for confusion.  Researchers often struggle with the question whether their assessment tools should be considered an medical device or not. For this purpose, flowcharts exist that help to determine whether an app of product should be classified as a medical device [see, e.g., @Ekker2013, and http://cetool.nl/general/scanAid]. Figure \@ref(fig:meddevflowchart) shows such a flow-chart. 
 
 ```{r meddevflowchart, fig.cap = "Flow-chart medical device.", echo = FALSE, out.width = '100%'}
 knitr::include_graphics("images/outcomes/Flow_MD.png")
 ```
 
-#### Grey areas
-CASPAR and NESDA studies ivamus enim turpis,
-pulvinar volutpat purus nec, lobortis imperdiet diam [not a medical device, only monitording]
 
-#### Classification medical device
-Add flowchart? 
-Notification of the Health and Youth Care Inspectorate
+### Data Processing Agreements
 
-#### Useful links
-Add links to EU and Dutch laws and CCMO website. 
-
-### Data sharing
-
-Intellectueel eigendom
-Server
-DSA data sharing agreement. 
+Intellectueel eigendom. Server. DSA data processing agreement. 
 
 [EMA data sharing is complicated. Indirect identifiablity should perhaps be the
 default assumption. GPS data can not be fully anonymised.] Vivamus enim turpis,
@@ -185,24 +204,11 @@ volutpat purus nec, lobortis imperdiet diam.
 
 ## Outcomes
 
-Precies def wat meten
-betrouwbaarheid, validiteit, ruwe data 
-
-VOlgend hoofdstuk per domein
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
+Precies def wat meten betrouwbaarheid, validiteit, ruwe dat. Volgende hoofdstukken, per domein. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
 sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
 tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
 sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
-
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.  
+ut massa tempor, ac dapibus dui viverra.
 
