Add reference (Ekker2013).

--- a/book.bib
+++ b/book.bib
@@ -195,6 +195,30 @@
   pmid            = {23157450},
 }
 
+
+@Book{Ekker2013,
+  author   = {Anton Ekker and Barbara van Rest},
+  title    = {{Medische apps, is certificeren nodig? In 7 stappen naar een CE-markering voor uw app}},
+  year = {2013},
+  url = {https://www.nictiz.nl/wp-content/uploads/2013/05/13005-Whitepaper-medische-apps.pdf},
+  publisher = {Nictiz},
+  address = {Den Haag}
+}
+
+@Article{EllisDavies2012,
+  author   = {Ellis-Davies, Kate and Sakkalou, Elena and Fowler, Nia C. and Hilbrink, Elma E. and Gattis, Merideth},
+  title    = {{CUE: The continuous unified electronic diary method}},
+  journal  = {Behavior Research Methods},
+  year     = {2012},
+  volume   = {44},
+  number   = {4},
+  pages    = {1063--1078},
+  doi      = {10.3758/s13428-012-0205-1},
+  keywords = {Ambulatory assessment,Child,Ecological momentary assessment,Electronic diary,Infancy,Motor development,Parent report},
+  pmid     = {22648694},
+}
+
+
 @Misc{Engel2016,
   author        = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
   title         = {{Ecological Momentary Assessment in Eating Disorder and Obesity Research: a Review of the Recent Literature}},
@@ -213,18 +237,6 @@
   volume        = {18},
 }
 
-@Article{EllisDavies2012,
-  author   = {Ellis-Davies, Kate and Sakkalou, Elena and Fowler, Nia C. and Hilbrink, Elma E. and Gattis, Merideth},
-  title    = {{CUE: The continuous unified electronic diary method}},
-  journal  = {Behavior Research Methods},
-  year     = {2012},
-  volume   = {44},
-  number   = {4},
-  pages    = {1063--1078},
-  doi      = {10.3758/s13428-012-0205-1},
-  keywords = {Ambulatory assessment,Child,Ecological momentary assessment,Electronic diary,Infancy,Motor development,Parent report},
-  pmid     = {22648694},
-}
 
 @Book{FieldSPSS,
   title     = {Discovering Statistics Using IBM SPSS Statistics},
