--- a/book.bib
+++ b/book.bib
@@ -16,6 +16,18 @@
   url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999},
 }
 
+
+@Article{Bates2015,
+  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+  journal = {Journal of Statistical Software},
+  year = {2015},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+}
+
 @Article{Beedie2005,
   author  = {Beedie, Christopher and Terry, Peter and Lane, Andrew},
   title   = {{Distinctions between emotion and mood}},
@@ -60,6 +72,50 @@
   isbn      = {978-94-6259-832-4},
 }
 
+
+@article{Borsboom2013,
+  author = {Borsboom, Denny and Cramer, Ang{\'{e}}lique O J},
+  doi = {doi:10.1146/annurev-clinpsy-050212-185608},
+  isbn = {1548-5943},
+  issn = {1548-5951},
+  journal = {Annual Review of Clinical Psychology},
+  keywords = {latent variable models,measurement,network analysis,philosophy of science,psychometrics,psychopathology},
+  number = {1},
+  pages = {91--121},
+  pmid = {23537483},
+  title = {{Network Analysis: An Integrative Approach to the Structure of Psychopathology}},
+  volume = {9},
+  year = {2013}
+}
+
+
+@article{Borsboom2016,
+  author = {Borsboom, Denny},
+  doi = {10.1002/wps.20375},
+  isbn = {0000000000000},
+  issn = {20515545},
+  journal = {World Psychiatry},
+  keywords = {Psychopathology,diagnosis,mental disorders,mental health,network approach,resilience,symptom networks,treatment,vulnerability},
+  number = {1},
+  pages = {5--13},
+  pmid = {28127906},
+  title = {{A network theory of mental disorders}},
+  volume = {16},
+  year = {2016}
+}
+
+
+@Article{Calenge2006,
+  author = {C. Calenge},
+  title = {The package adehabitat for the R software: tool for the analysis of space and habitat use by animals},
+  journal = {Ecological Modelling},
+  volume = {197},
+  number = {3-4},
+  pages = {516--519},
+  year = {2006},
+  doi = {10.1016/j.ecolmodel.2006.03.017}
+}
+
 @misc{ccmo_meddev,
   author = {{CCMO}},
   year = {2018},
@@ -67,7 +123,6 @@
   url = {http://www.ccmo.nl/en/research-with-a-medical-device},
   note = {Retrieved May 25 2018, from \url{http://www.ccmo.nl/en/research-with-a-medical-device}}
 }
-
 
 @Article{Conner2012a,
   author        = {Conner, Tamlin S. and Barrett, Lisa Feldman},
@@ -195,7 +250,6 @@
   pmid            = {23157450},
 }
 
-
 @Book{Ekker2013,
   author   = {Anton Ekker and Barbara van Rest},
   title    = {{Medische apps, is certificeren nodig? In 7 stappen naar een CE-markering voor uw app}},
@@ -218,7 +272,6 @@
   pmid     = {22648694},
 }
 
-
 @Misc{Engel2016,
   author        = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
   title         = {{Ecological Momentary Assessment in Eating Disorder and Obesity Research: a Review of the Recent Literature}},
@@ -237,6 +290,67 @@
   volume        = {18},
 }
 
+@article{Epskamp2012,
+  title = {qgraph: Network visualizations of relationships in psychometric data},
+  author = {Sacha Epskamp and Ang\'elique O. J. Cramer and Lourens J. Waldorp and Verena D. Schmittmann and Denny Borsboom},
+  journal = {Journal of Statistical Software},
+  volume = {48},
+  number = {4},
+  pages = {1--18},
+  year = {2012},
+  doi = {10.18637/jss.v048.i04},
+  url = {http://www.jstatsoft.org/v48/i04/}
+}
+
+
+@article{Epskamp2018a,
+  archivePrefix = {arXiv},
+  arxivId = {1604.08462},
+  author = {Epskamp, Sacha and Borsboom, Denny and Fried, Eiko I.},
+  doi = {10.3758/s13428-017-0862-1},
+  eprint = {1604.08462},
+  isbn = {1554-3528 (Electronic) 1554-351X (Linking)},
+  issn = {15543528},
+  journal = {Behavior Research Methods},
+  keywords = {Bootstrap,Network psychometrics,Psychological networks,Replicability,Tutorial},
+  number = {1},
+  pages = {195--212},
+  pmid = {28342071},
+  url = {https://arxiv.org/abs/1604.08462},
+  title = {{Estimating psychological networks and their accuracy: A tutorial paper}},
+  volume = {50},
+  year = {2018}
+}
+
+@article{Epskamp2018b,
+  author = {Epskamp, Sacha and Borsboom, Denny and Fried, Eiko I.},
+  doi = {10.3758/s13428-017-0862-1},
+  eprint = {1604.08462},
+  isbn = {1554-3528 (Electronic) 1554-351X (Linking)},
+  issn = {15543528},
+  journal = {Behavior Research Methods},
+  keywords = {Bootstrap,Network psychometrics,Psychological networks,Replicability,Tutorial},
+  number = {1},
+  pages = {195--212},
+  pmid = {28342071},
+  title = {{Estimating psychological networks and their accuracy: A tutorial paper}},
+  volume = {50},
+  year = {2018}
+}
+
+@article{Epskamp2018c,
+  author = {Epskamp, Sacha and Fried, Eiko I.},
+  booktitle = {Psychological Methods},
+  doi = {10.1037/met0000167},
+  eprint = {1607.01367},
+  isbn = {1-55752-778-4},
+  issn = {1082989X},
+  keywords = {Network modeling,Partial correlation networks,Regularization,Tutorial},
+  pmid = {29595293},
+  publisher = {American Psychological Association},
+  title = {{A Tutorial on Regularized Partial Correlation Networks}},
+  year = {2018}
+}
 
 @Book{FieldSPSS,
   title     = {Discovering Statistics Using IBM SPSS Statistics},
@@ -460,6 +574,15 @@
   pmid    = {16262989},
 }
 
+@Article{ruf1999,
+  title = {The Lomb-Scargle Periodogram in Biological Rhythm Research: Analysis of Incomplete and Unequally Spaced Time-Series},
+  author = {T. Ruf},
+  journal = {Biological Rhythm Research},
+  year = {1999},
+  volume = {30},
+  pages = {178-201},
+}
+
 @Article{russell1980circumplex,
   author    = {Russell, James A},
   title     = {A circumplex model of affect.},
@@ -470,6 +593,21 @@
   pages     = {1161},
   publisher = {American Psychological Association},
 }
+
+@article{Saeb2015,
+  author = {Saeb, Sohrab and Zhang, Mi and Karr, Christopher J. and Schueller, Stephen M. and Corden, Marya E. and Kording, Konrad P. and Mohr, David C.},
+  doi = {10.2196/jmir.4273},
+  isbn = {1438-8871 (Electronic)$\backslash$r1438-8871 (Linking)},
+  issn = {14388871},
+  journal = {Journal of Medical Internet Research},
+  keywords = {Activities of daily living,Classification,Cluster analysis,Depression,Mobile health (mHealth)},
+  number = {7},
+  pmid = {26180009},
+  title = {{Mobile phone sensor correlates of depressive symptom severity in daily-life behavior: An exploratory study}},
+  volume = {17},
+  year = {2015}
+}
+
 
 @Misc{Scheffer2009,
   author        = {Scheffer, Marten and Bascompte, Jordi and Brock, William A. and Brovkin, Victor and Carpenter, Stephen R. and Dakos, Vasilis and Held, Hermann and {Van Nes}, Egbert H. and Rietkerk, Max and Sugihara, George},
@@ -601,6 +739,20 @@
   keywords  = {Ecological momentary assessment,Experience samplin,assessment reactivity,ballegooijen,correspondence,depression,ecological momentary assessment,experience sampling,mobile health,mood,nl,smartphones,van,vu,w},
   publisher = {BMC Psychiatry},
   url       = {http://bmcpsychiatry.biomedcentral.com/articles/10.1186/s12888-016-1065-5},
+}
+
+
+@Article{VanderKrieke2015,
+  author = "van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter", 
+  title = "Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study",
+  journal = "JMIR Research Protocols",
+  year = "2015",
+  month = "Aug",
+  day = "07",
+  volume = "4",
+  number = "3",
+  pages = "e100",
+  doi = "10.2196/resprot.4000"
 }
 
 @Article{VandeLeemput2014,
@@ -742,6 +894,17 @@
   publisher = {American Psychological Association ({APA})},
   url       = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0025688},
 }
+
+
+@book{wickham2016ggplot2,
+  title = {ggplot2: elegant graphics for data analysis},
+  author = {Wickham, Hadley},
+  year = {2016},
+  publisher = {Springer},
+  doi = {10.1007/978-0-387-98141-3}
+}
+
+
 
 @Book{xie2015,
   title     = {Dynamic Documents with {R} and knitr},
