--- a/packages.bib
+++ b/packages.bib
@@ -6,13 +6,35 @@
   year = {2017},
   url = {https://www.R-project.org/},
 }
+
 @Manual{R-bookdown,
-  title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-  author = {Yihui Xie},
-  year = {2017},
-  note = {R package version 0.5},
-  url = {https://CRAN.R-project.org/package=bookdown},
+    title = {bookdown: Authoring Books and Technical Documents with R
+      Markdown},
+    author = {Yihui Xie},
+    year = {2018},
+    note = {R package version 0.7},
+    url = {https://github.com/rstudio/bookdown},
 }
+
+@Book{R-bookdown_book,
+    title = {bookdown: Authoring Books and Technical Documents with {R}
+      Markdown},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2016},
+    note = {ISBN 978-1138700109},
+    url = {https://github.com/rstudio/bookdown},
+}
+
+@Manual{R-graphicalVAR,
+  title = {graphicalVAR: Graphical VAR for Experience Sampling Data},
+  author = {Sacha Epskamp},
+  year = {2017},
+  note = {R package version 0.2.1},
+  url = {https://CRAN.R-project.org/package=graphicalVAR},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -20,6 +42,23 @@
   note = {R package version 1.17},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+
+@Manual{R-nlme,
+  title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
+  author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and Deepayan Sarkar and {R Core Team}},
+  year = {2018},
+  note = {R package version 3.1-137},
+  url = {https://CRAN.R-project.org/package=nlme},
+}
+
+@Manual{R-simstudy,
+  title = {simstudy: Simulation of Study Data},
+  author = {Keith Goldfeld},
+  year = {2018},
+  note = {R package version 0.1.9},
+  url = {https://CRAN.R-project.org/package=simstudy},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
@@ -27,3 +66,4 @@
   note = {R package version 1.8},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
+
