--- a/part2/03_study-design.Rmd
+++ b/part2/03_study-design.Rmd
@@ -88,10 +88,7 @@ facilisis a, fringilla ut neque. Nunc hendrerit cursus eleifend. Pellentesque
 habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
 Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at
-laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc
-ac tellus nec tortor interdum porta. 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit simstudy [@R-simstudy]. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. 
 
 ```{r sdsimcor, fig.cap='Cross-correlation of two simulated variables.'}
 C <- matrix(c(1.0, 0.2, 
@@ -153,6 +150,9 @@ dui viverra.
 
 Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
 
+[EMA data sharing is complicated. Indirect identifiablity should perhaps be the default assumption. GPS data can not be fully anonymised.] Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam. Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec,
+lobortis imperdiet diam.
+
 
 ### Medical device
 
@@ -183,32 +183,17 @@ knitr::include_graphics("images/outcomes/Flow_MD.png")
 
 ### Data Processing Agreements
 
-Intellectueel eigendom. Server. DSA data processing agreement. 
+Data processing agreement (DSA). Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam.
 
-[EMA data sharing is complicated. Indirect identifiablity should perhaps be the
-default assumption. GPS data can not be fully anonymised.] Vivamus enim turpis,
-pulvinar volutpat purus nec, lobortis imperdiet diam. Nunc hendrerit cursus
-eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada
-fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec,
-lobortis imperdiet diam.
 
 #### Informed consent
-[Informed Consent] Donec sed lectus at sem ultrices commodo. Proin a viverra
-metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed
-at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt
-ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque.
-Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus
-et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar
-volutpat purus nec, lobortis imperdiet diam.
+
+[Informed Consent] Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque.
+Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam.
 
 
 ## Outcomes
 
-Precies def wat meten betrouwbaarheid, validiteit, ruwe dat. Volgende hoofdstukken, per domein. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
+Precies def wat meten betrouwbaarheid, validiteit, ruwe dat. Volgende hoofdstukken, per domein. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
+sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
 
